// Definitions for proxying query plans.

syntax = "proto3";

package sqlexec.plan;

message ExecutePlanRequest {
  oneof plan {
    bytes physical = 1;
    // TODO: Possibly allow for logical plans too?
  }
}

message ExecutePlanResponse { bytes arrow_ipc = 1; }

service PlanService {
  // Execute a plan, returning a stream of responses.
  rpc ExecutePlan(ExecutePlanRequest) returns (stream ExecutePlanResponse);
}
